fix: dark mode and form colours

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body.darkmode--activated .darkmode-ignore {
 
 body.darkmode--activated .MuiButton-contained {
     background-color: #000 !important;
+    color: #fff !important;
 }
 
 body.darkmode--activated .MuiButton-contained p {
@@ -30,12 +31,22 @@ body.darkmode--activated div:not(.MuiBackdrop-root, .MuiDrawer-root) {
     background-blend-mode: color;
 }
 
+body.darkmode--activated .MuiFormLabel-root {
+    color: #000 !important;
+    z-index: 1000;
+}
+
+body.darkmode--activated .MuiInput-root {
+    border-bottom: 1px solid #000 !important;
+}
+
 body.darkmode--activated h1,
 body.darkmode--activated h2,
 body.darkmode--activated h3,
 body.darkmode--activated h4,
 body.darkmode--activated h5,
 body.darkmode--activated h6,
-body.darkmode--activated p {
+body.darkmode--activated p,
+body.darkmode--activated label {
     color: #000;
 }
